2013-07-09  James Hunt  <james.hunt@ubuntu.com>

	* {configure.ac,Makefile.am}: Allow upstart-dconf-bridge to be
	  disabled even if dependencies are available (--disable-dconf-bridge).
	* extra/upstart-dconf-bridge.c: Changed event name to simply 'dconf'
	  with fixed first argument of 'TYPE=changed' for consistency with
	  other bridge events and to accommodate future dconf API changes.

2013-07-08  James Hunt  <james.hunt@ubuntu.com>

	* extra/upstart-dconf-bridge.c: dconf_changed():
	  - Simplified logic after desrt clarified 'changed' signal
	  behaviour.

2013-07-05  James Hunt  <james.hunt@ubuntu.com>

	* extra/upstart-dconf-bridge.c:
	  - Added DCONF_EVENT.
	  - Reformatted to be more consistent with other bridges.
	  - main():
	    - Connect to UPSTART_SESSION rather than D-Bus session bus.
	    - Handle generation of pidfile name.
	  - dconf_changed():
	    - Correct path logic and ensure that if the changes array contains
	      values that they are separated correctly from the prefix.

2013-07-04  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.9.1

2013-07-04  James Hunt  <james.hunt@ubuntu.com>

	* Perform 2-pass generation of libupstart.pc to ensure library
	  version specified correctly.

2013-07-03  James Hunt  <james.hunt@ubuntu.com>

	* extra/upstart-dbus-bridge.c: main(): Check nih_str_split() return.
	* extra/upstart-event-bridge.c: main(): Check nih_str_split() return.
	* extra/upstart-file-bridge.c: main():
	  - Check nih_str_split() return.
	  - Only attempt to extract PID from UPSTART_SESSION
	    in user mode (LP: #1197225).
	* Makefile.am: Remove intl directory.
	* configure.ac: Use external gettext library.

2013-07-02  James Hunt  <james.hunt@ubuntu.com>

	* lib/Makefile.am: Make nih-dbus-tool generate code into the
	  upstart/ directory as we need it there to allow the tests to run
	  against a simulated installed header directory.
	* lib/tests/test_libupstart.c: Remove unecessary include (which