@@ -1,0 +1,52 @@
+.TH dconf\-event 7 2013-07-09 upstart
+.\"
+.SH NAME
+dconf \- event signalling that a dconf key has been changed
+.\"
+.SH SYNOPSIS
+.B dconf
+.BI TYPE\fR= changed
+.BI KEY\fR= KEY
+.BI VALUE\fR= VALUE
+.\"
+.SH DESCRIPTION
+
+The
+.B dconf
+event is generated by the
+.BR upstart\-dconf\-bridge (8)
+daemon when a dconf key changes whose details match the
+.I dconf
+event condition and environment specified in a job's
+.B start on
+or
+.B stop on
+stanza.
+
+.\"
+.SH EXAMPLES
+.\"
+.IP "start on dconf TYPE=changed KEY=/desktop/gnome/remote-access/notify-on-connect VALUE=true"
+
+Start job when the user allows remote access to their desktop.
+.\"
+.SH AUTHOR
+Written by James Hunt
+.RB < james.hunt@canonical.com >
+.\"
+.SH BUGS
+Report bugs at 
+.RB < https://launchpad.net/upstart/+bugs >
+.\"
+.SH COPYRIGHT
+Copyright \(co 2013 Canonical Ltd.
+.PP
+This is free software; see the source for copying conditions.  There is NO
+warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+.\"
+.SH SEE ALSO
+.BR dconf (7)
+.BR gsettings (1)
+.BR init (5)
+.BR init (8)
+.BR upstart\-dconf\-bridge (8)
